# real-estate-api

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: Dockerfile  alembic.ini  config.py  database.py  main.py  providers.yaml  update.py
app/alembic/: env.py
app/alembic/versions/: 0e99539a55e0_update_fields.py  2b2c8c7efe81_initial.py  704d694c93f8_source_last_check_ts_datetime_bigint.py
app/api/exceptions/: body.py  source.py
app/api/schemas/: source.py
app/models/: __init__.py  source.py  url.py
app/parsers/: __init__.py  avito.py  cian.py
app/parsers/core/: __init__.py  abstract_parser.py  browser_instance.py  parsers_manager.py
app/parsers/core/browser/: __init__.py  browser_instance.py  proxies.json  stealth.min.js
app/parsers/exceptions/: __init__.py  parser.py  price.py
app/routers/v1/: __init__.py  source_items.py  urls.py
app/schemas/: url.py
app/utils/: raise_if.py  source.py
tests/: Dockerfile  conftest.py  test_urls_router.py
